gcc/testsuite/g++.dg/concepts/class3.C
concept None<typename T> { };

template<None T>
struct foo {
  void bar(T& x, T& y) {
    x + y; // { dg-error "no match" }
  }
};
